--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h2>PDDL</h2>
-                <p>v1.0.0</p>
+                <p>by fayodayo</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
