--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="type-label-lg">List</span>
                 </router-link>
                 <router-link class="nav__tab" to="/challenges">
-                    <span class="type-label-lg">challenges</span>
+                    <span class="type-label-lg">Challenges</span>
                 </router-link>
                 <router-link class="nav__tab" to="/leaderboard">
                     <span class="type-label-lg">Leaderboard</span>
