--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
+                        href="https://forms.gle/6pBXHDDWG437JcHL9"
                         target="_blank"
                         >Submit Record</a
                     >
