--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=1024" />
-        <title>Poly Dash Demon List</title>
+        <title>Poly Dash Impossible Levels List</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
         <link rel="icon" href="/list_icon.png" />
@@ -37,7 +37,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>PDDL</h2>
+                <h2>PD ILL</h2>
                 <p></p>
             </div>
             <nav class="nav">
