--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>PD ILL</h2>
+                <h2>Poly Dash ILL</h2>
                 <p></p>
             </div>
             <nav class="nav">
