--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         class="nav__cta type-label-lg"
                         href="https://forms.gle/6pBXHDDWG437JcHL9"
                         target="_blank"
-                        >Submit Record</a
+                        >Submit World Record</a
                     >
                 </div>
             </nav>
