--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <span class="type-label-lg">Leaderboard</span>
                 </router-link>
                 <router-link class="nav__tab" to="/roulette">
-                    <span class="type-label-lg">Roulette</span>
+                    <span class="type-label-lg"></span>
                 </router-link>
                 <div class="nav__actions">
                     <button
